add endpoint for user's clock in list
