# swagger/v1/swagger.yaml
@@ -42,6 +42,34 @@ paths:
                   - sleep_end
               required:
               - event_type
+    get:
+      summary: Get all Clock In Records
+      tags:
+      - Clock In
+      parameters:
+      - name: user_id
+        in: path
+        description: User ID which the clock in will be performed for
+        required: true
+        schema:
+          type: integer
+      - name: page
+        in: query
+        example: 1
+        schema:
+          type: integer
+      - name: limit
+        in: query
+        example: 32
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/clock_in_list_record"
   "/api/v1/follows":
     post:
       summary: Create Follow
@@ -331,6 +359,29 @@ components:
               example: user
             attributes:
               "$ref": "#/components/schemas/clock_in_record"
+    clock_in_list_record:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: string
+                example: '10'
+              type:
+                type: string
+                example: clock_in
+              attributes:
+                "$ref": "#/components/schemas/clock_in_record"
+        links:
+          "$ref": "#/components/schemas/pagination_links"
+        meta:
+          type: object
+          properties:
+            pagination:
+              "$ref": "#/components/schemas/pagination_details"
     pagination_links:
       type: object
       properties:
